--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -3,4 +3,581 @@
 }
 body {
   background-color: #2d316a;
+  font-family: Helvetica, sans-serif;
+}
+/* первый блок */
+.titleBlock {
+  padding: 0.8vw 1.7vw 0 1.7vw;
+  height: 55vw;
+}
+h1 {
+  font-size: 13.8vw;
+  font-weight: bold;
+  color: white;
+  margin-top: 2vw;
+}
+.logoPics {
+  display: flex;
+}
+.logo_1,
+.logo_2,
+.logo_3,
+.logo_4,
+.logo_5,
+.logo_6,
+.logo_7,
+.logo_8,
+.logo_9,
+.logo_10,
+.logo_11,
+.logo_12 {
+  width: 10vw;
+  height: 10vw;
+  margin-right: 0.8vw;
+}
+.logo_2,
+.logo_7 {
+  animation: opacity-animation 1.5s linear infinite;
+}
+.logo_12,
+.logo_3 {
+  animation: opacity-animation 1s linear infinite;
+}
+.logo_8,
+.logo_5 {
+  animation: opacity-animation 2s linear infinite;
+}
+.logo_1 {
+  animation: opacity-animation 0.5s linear infinite;
+}
+.logo_4,
+.logo_9,
+.logo_11 {
+  animation: opacity-animation 4s linear infinite;
+}
+.logo_6,
+.logo_10 {
+  animation: opacity-animation 3.5s linear infinite;
+}
+.top,
+.bottom {
+  display: flex;
+}
+.circle_1,
+.circle_2,
+.circle_3,
+.circle_4 {
+  width: 5vw;
+  height: 5vw;
+  border-radius: 100%;
+  background-color: white;
+}
+.logo_2 {
+  margin-top: 17vw;
+}
+.logo12,
+.logo5 {
+  width: 10vw;
+}
+.logo_3,
+.logo_9,
+.logo_11 {
+  margin-top: 17vw;
+}
+.logo_4,
+.logo56,
+.logo78,
+.logo_12 {
+  margin-top: 8vw;
+}
+.logo_8 {
+  margin-top: 9vw;
+}
+.logo_10 {
+  margin-top: 27vw;
+}
+/* второй блок(овечка) */
+.firstBlock {
+  background-color: white;
+  height: 32vw;
+  overflow: hidden;
+}
+.sheeps {
+  display: flex;
+  overflow: hidden;
+}
+
+.sheep1,
+.sheep2,
+.sheep3 {
+  position: absolute;
+  z-index: 2;
+  top: 60vw;
+  background-image: url("../images/sheepGoesAndJumps.png");
+  height: 27vw;
+  width: 24vw;
+  background-size: 179.2vw 27vw;
+}
+.sheep1 {
+  animation: sheepWalk-1 5s infinite steps(7);
+}
+.sheep2 {
+  animation: sheepWalk-2 9s infinite steps(7);
+}
+.sheep3 {
+  animation: sheepWalk-2 14s infinite steps(7);
+}
+.fence {
+  top: 74vw;
+  left: 43.6vw;
+  position: absolute;
+  width: 9.8vw;
+  height: 13vw;
+}
+/* третий блок-бенто  */
+.secondBlock {
+  height: 55.4vw;
+  background-color: white;
+}
+.blocks1 {
+  display: flex;
+}
+.block_1,
+.block_2,
+.block_3 {
+  background-color: #2d316a;
+}
+.block_1 {
+  width: 44.2vw;
+  height: 55.4vw;
+  margin-right: 0.8vw;
+  padding-left: 1vw;
+  overflow: hidden;
+}
+.halfMoons2 {
+  width: 42.4vw;
+  height: 55.4vw;
+  background-image: url(../images/moons.png);
+  background-size: 42.4vw 55.4vw;
+}
+.halfMoons1 {
+  width: 42.4vw;
+  height: 55.4vw;
+  background-image: url(../images/moon2.png);
+  background-size: 42.4vw 55.4vw;
+}
+.moon_1 {
+  margin-top: -55.4vw;
+  animation: upAndDown 6s infinite;
+}
+.block_2 {
+  width: 55vw;
+  height: 27.3vw;
+  padding-top: 3.2vw;
+  padding-left: 2.1vw;
+  overflow: hidden;
+}
+/*typewriter*/
+.text1,
+.text2,
+.text3 {
+  font-weight: lighter;
+  font-size: 6vw;
+  color: white;
+  line-height: 7vw;
+  overflow: hidden;
+}
+.text1 {
+  width: 44vw;
+  height: 7vw;
+  animation: typing1 6s steps(22) infinite;
+}
+.text2 {
+  width: 50.5vw;
+  height: 7vw;
+  animation: typing2 6s steps(22) infinite;
+}
+.text3 {
+  width: 16vw;
+  height: 7vw;
+  animation: typing3 6s steps(22) infinite;
+}
+
+.block_3 {
+  margin-top: 0.8vw;
+  width: 55vw;
+  height: 27.3vw;
+  overflow: hidden;
+}
+
+.halfMoons3 {
+  width: 70vw;
+  height: 13.8vw;
+  background-image: url(../images/halfMoons.png);
+  background-size: 70vw 13.8vw;
+  animation: leftAndRight-1 3s linear infinite;
+}
+.halfMoons4 {
+  width: 70vw;
+  height: 13.8vw;
+  margin-left: ;
+  background-image: url(../images/halfMoons.png);
+  background-size: 70vw 13.8vw;
+  animation: leftAndRight-2 3s linear infinite;
+}
+/* четвертый блолк-бенто */
+.thirdSection {
+  background-color: white;
+  height: 26.4vw;
+  padding-top: 0.8vw;
+  padding-bottom: 0.8vw;
+}
+.blocks2 {
+  display: flex;
+}
+.block_4,
+.block_5 {
+  background-color: #2d316a;
+  height: 24.8vw;
+  overflow: hidden;
+}
+.block_4 {
+  z-index: 2;
+  width: 55vw;
+  overflow: hidden;
+}
+.block_4 div {
+  width: 14.8vw;
+  height: 9.5vw;
+  background-image: url(../images/pillow.png);
+  background-size: 14.8vw 9.5vw;
+}
+.pillow1 {
+  margin-left: 3vw;
+  margin-top: -10vw;
+  animation: pad1 3s linear infinite;
+  animation-play-state: running;
+}
+.pillow2 {
+  margin-left: 10vw;
+  margin-top: -10vw;
+  animation: pad2 4s linear infinite;
+  animation-play-state: running;
+}
+.pillow3 {
+  margin-left: 30vw;
+  margin-top: -10vw;
+  animation: pad1 5s linear infinite;
+  animation-play-state: running;
+}
+.pillow4 {
+  margin-left: 35vw;
+  margin-top: -10vw;
+  animation: pad2 7s linear infinite;
+  animation-play-state: running;
+}
+.block_5 {
+  margin-left: 1vw;
+  width: 44vw;
+  overflow: hidden;
+}
+.block_5 div {
+  position: absolute;
+  background-color: white;
+  width: 2.7vw;
+  height: 2.7vw;
+  border-radius: 100%;
+}
+.circleFly1 {
+  animation: flying-1 4s infinite linear;
+}
+.circleFly2 {
+  animation: flying-1 5s infinite linear;
+}
+.circleFly3 {
+  animation: flying-1 6s infinite linear;
+}
+.circleFly4 {
+  animation: flying-1 8s infinite linear;
+}
+
+/* пятый блок */
+.fourthBlock {
+  height: 56vw;
+}
+.fourthBlock p,
+.block_6 p {
+  position: absolute;
+  font-size: 3.5vw;
+  font-weight: lighter;
+  color: white;
+}
+.circle_5,
+.circle_6,
+.circle_7,
+.circle_8,
+.circle_9 {
+  border-radius: 100%;
+  background-color: white;
+  width: 3.8vw;
+  height: 3.8vw;
+}
+.logo_13 {
+  position: absolute;
+  margin-top: 18.1vw;
+  margin-left: 1.7vw;
+}
+.logo_14 {
+  position: absolute;
+  margin-top: 31.8vw;
+  margin-left: 12.4vw;
+}
+.logo_15 {
+  position: absolute;
+  margin-top: 46.3vw;
+  margin-left: 34.5vw;
+}
+.logo_16 {
+  position: absolute;
+  margin-top: 22vw;
+  margin-left: 36.6vw;
+}
+.logo_17 {
+  position: absolute;
+  margin-top: 0.6vw;
+  margin-left: 45vw;
+}
+.logo_18 {
+  position: absolute;
+  margin-top: 14.6vw;
+  margin-left: 45vw;
+}
+.logo_19 {
+  position: absolute;
+  margin-top: 32.7vw;
+  margin-left: 47.5vw;
+}
+.logo_20 {
+  position: absolute;
+  margin-top: 39vw;
+  margin-left: 56vw;
+}
+.logo_21 {
+  position: absolute;
+  margin-top: 11vw;
+  margin-left: 66.7vw;
+}
+.logo_22 {
+  position: absolute;
+  margin-top: 39vw;
+  margin-left: 77.5vw;
+}
+.logo_23 {
+  position: absolute;
+  margin-top: 6vw;
+  margin-left: 88.4vw;
+}
+.logo_21,
+.logo_13 {
+  animation: opacity-animation 3.5s linear infinite;
+}
+.logo_19,
+.logo_23 {
+  animation: opacity-animation 1.5s linear infinite;
+}
+
+.logo_14,
+.logo_16 {
+  animation: opacity-animation 1s linear infinite;
+}
+.logo_20,
+.logo_22 {
+  animation: opacity-animation 2s linear infinite;
+}
+.logo_15,
+.logo_17 {
+  animation: opacity-animation 0.5s linear infinite;
+}
+.logo_18 {
+  animation: opacity-animation 3.5s linear infinite;
+}
+.text4 {
+  position: absolute;
+  margin-top: 9.6vw;
+  margin-left: 12.1vw;
+}
+.text5 {
+  position: absolute;
+  margin-top: 44.3vw;
+  margin-left: 1.7vw;
+}
+.text6 {
+  position: absolute;
+  margin-top: 27.8vw;
+  margin-left: 56vw;
+}
+/* шестой блок бегущая строка */
+.fifthBlock {
+  background-color: white;
+  height: 31vw;
+  width: 100vw;
+  overflow: hidden;
+}
+.dna {
+  display: flex;
+  margin-top: 3vw;
+  animation: running-animation 5s linear infinite;
+  white-space: nowramp;
+}
+.dnaCase {
+  width: 107.9vw;
+  height: 26vw;
+}
+
+/* седьмой блок-бенто */
+.sixthBlock {
+  height: 56vw;
+  background-color: white;
+  padding-bottom: 0.8vw;
+}
+.block_6,
+.block_7 {
+  background-color: #2d316a;
+  height: 55.2vw;
+}
+.blocks3 {
+  display: flex;
+}
+.block_6 {
+  width: 55vw;
+  overflow: hidden;
+}
+
+.text12 {
+  animation: flying-2 6s infinite linear;
+}
+.text13 {
+  animation: flying-3 8s infinite linear;
+}
+.text14 {
+  animation: flying-4 7s infinite linear;
+}
+.text15 {
+  animation: flying-5 8s infinite linear;
+}
+.text16 {
+  animation: flying-6 8s infinite linear;
+}
+.circle_9 {
+  animation: flying-7 4s infinite linear;
+}
+.circle_10 {
+  animation: flying-8 6s infinite linear;
+}
+.circle_11 {
+  animation: flying-9 9s infinite linear;
+}
+.circle_12 {
+  animation: flying-10 10s infinite linear;
+}
+.circle_13 {
+  animation: flying-11 8s infinite linear;
+}
+
+.circle_9,
+.circle_10,
+.circle_11,
+.circle_12,
+.circle_13 {
+  position: absolute;
+  border-radius: 100%;
+  background-color: white;
+  width: 3.8vw;
+  height: 3.8vw;
+}
+
+/* спрайт анимация люди  */
+.block_7 {
+  margin-left: 1vw;
+  width: 44vw;
+  padding: 4.6vw 5vw 4.6vw 5vw;
+}
+.humanSleeps {
+  width: 35vw;
+  height: 46vw;
+  background-size: 113.6vw 46.8vw;
+  background-image: url(../images/humanSleeps.png);
+  animation: sleeping 4s steps(3) infinite;
+}
+
+/* 38vw */
+/* восьмой тройной бенто */
+.seventhBlock {
+  height: 38vw;
+  background-color: white;
+}
+.blocks4 {
+  display: flex;
+}
+.block_8,
+.block_9,
+.block_10 {
+  height: 38vw;
+  background-color: #2d316a;
+}
+.block_8 {
+  width: 33.4vw;
+  margin-right: 0.8vw;
+}
+.block_9 {
+  width: 31.6vw;
+  margin-right: 0.9vw;
+  padding-left: 2.3vw;
+  padding-right: 2.3vw;
+}
+.block_9 p {
+  position: absolute;
+  font-size: 2vw;
+  color: white;
+}
+.text7 {
+  margin-top: 3vw;
+  animation: leftAndRight-3 3s infinite linear;
+}
+.text8 {
+  margin-top: 10.2vw;
+  animation: leftAndRight-4 3s infinite linear;
+}
+.text9 {
+  margin-top: 18.4vw;
+  animation: leftAndRight-5 3s infinite linear;
+}
+.text10 {
+  margin-top: 25.9vw;
+  animation: leftAndRight-3 4s infinite linear;
+}
+.text11 {
+  margin-top: 30.9vw;
+  animation: leftAndRight-4 5s infinite linear;
+}
+.block_10 {
+  width: 33.3vw;
+}
+/* девятый блок бегущая строка*/
+.eighthBlock {
+  background-color: white;
+  height: 11.4vw;
+}
+.eighthBlock div {
+  display: flex;
+  overflow: hidden;
+}
+.eighthBlock p {
+  margin-top: 3vw;
+  color: #2d316a;
+  font-weight: lighter;
+  font-size: 6vw;
+  text-transform: uppercase;
+  animation: running-animation 6s linear infinite;
+  white-space: nowrap;
 }
