--- a/stylesheets/adaptive.css
+++ b/stylesheets/adaptive.css
@@ -1,12 +1,582 @@
-/* @media screen and (max-width: 1440px) {
-
+@media all and (min-width: 769px) {
+  .logo-X,
+  .halfMoons5,
+  .halfMoons6,
+  .halfMoons7 {
+    display: none;
+  }
 }
-@media screen and (max-width: 1024px) {
+@media all and (max-width: 768px) {
+  .titleBlock {
+    height: 133.3vw;
+    padding: 4vw 1.3vw 0 1.3vw;
+  }
+  h1 {
+    font-size: 18.9vw;
+    margin-top: 6vw;
+  }
+  .circle_1,
+  .circle_2,
+  .circle_3,
+  .circle_4 {
+    width: 7.6vw;
+    height: 7.6vw;
+  }
+  .logo_1,
+  .logo_2,
+  .logo_3,
+  .logo_5,
+  .logo_6,
+  .logo_7,
+  .logo_8,
+  .logo_9,
+  .logo_10,
+  .logo_12,
+  .logo-X {
+    width: 14.8vw;
+    height: 14.8vw;
+    margin-right: 1.3vw;
+  }
+  .logo_4,
+  .logo_9,
+  .logo_11 {
+    display: none;
+  }
+  .logo12,
+  .logo5 {
+    width: 14.8vw;
+  }
+  .logo_2 {
+    margin-top: 28.8vw;
+  }
+  .logo_3 {
+    margin-top: 24.6vw;
+  }
+  .logo56,
+  .logo78,
+  .logo_12 {
+    margin-top: 9.8vw;
+  }
+  .logo_6 {
+    margin-top: 19vw;
+  }
+  .logo_8 {
+    margin-top: 33.9vw;
+  }
+  .logo-X {
+    margin-top: 16.4vw;
+  }
+  .logo_10 {
+    margin-top: 72.1vw;
+  }
+  .sheep1,
+  .sheep2,
+  .sheep3 {
+    z-index: 2;
+    top: 138.3vw;
+  }
+  .fence {
+    top: 152.3vw;
+  }
+  .secondBlock,
+  .block_1 {
+    height: 84.1vw;
+  }
+  .block_1 {
+    width: 49.3vw;
+  }
+  .block_2,
+  .block_3 {
+    width: 50vw;
+  }
 
-}
-@media screen and (max-width: 768px) {
+  .halfMoons1,
+  .halfMoons2 {
+    width: 47.4vw;
+    height: 55.4vw;
+    background-size: 47.4vw 55.4vw;
+  }
+  .moon_1 {
+    margin-top: -26.6vw;
+    animation: upAndDown_2 4s infinite;
+  }
+  @keyframes upAndDown_2 {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(26vw);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+  .text1,
+  .text2,
+  .text3 {
+    font-size: 4.7vw;
+    line-height: 7vw;
+    height: 7vw;
+  }
+  .block_2 {
+    padding-top: 3vw;
+    padding-left: 6vw;
+  }
+  .block_3 {
+    height: 56vw;
+  }
 
+  .halfMoons3,
+  .halfMoons4 {
+    width: 60.2vw;
+    height: 11.3vw;
+    background-size: 60.2vw 11.3vw;
+  }
+  .halfMoons5,
+  .halfMoons6,
+  .halfMoons7 {
+    width: 37.2vw;
+    height: 11.3vw;
+    background-size: 37.2vw 11.3vw;
+  }
+  .halfMoons5 {
+    background-image: url(../images/halfMoons-1.png);
+    animation: leftAndRight_3 3s infinite;
+  }
+  .halfMoons6,
+  .halfMoons7 {
+    background-image: url(../images/halfMoons-2.png);
+  }
+  .halfMoons6 {
+    animation: leftAndRight_4 3s infinite;
+  }
+  .halfMoons7 {
+    animation: leftAndRight_5 3s infinite;
+  }
+
+  @keyframes leftAndRight_3 {
+    0% {
+      transform: translateX(0);
+    }
+    50% {
+      transform: translateX(-30vw);
+    }
+    75% {
+      transform: translateX(-30vw);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+  @keyframes leftAndRight_4 {
+    0% {
+      transform: translateX(-15vw);
+    }
+    50% {
+      transform: translateX(0vw);
+    }
+    75% {
+      transform: translateX(-30vw);
+    }
+    100% {
+      transform: translateX(-15vw);
+    }
+  }
+  @keyframes leftAndRight_5 {
+    0% {
+      transform: translateX(30vw);
+    }
+    50% {
+      transform: translateX(45vw);
+    }
+    75% {
+      transform: translateX(17vw);
+    }
+    100% {
+      transform: translateX(30vw);
+    }
+  }
+  .thirdSection {
+    height: 27.4vw;
+    padding-top: 0.8vw;
+    padding-bottom: 1vw;
+  }
+  .block_4,
+  .block_5 {
+    height: 25.9vw;
+  }
+  .block_4 {
+    width: 65.8vw;
+  }
+  .block_5 {
+    margin-left: 1.1vw;
+    width: 33.1vw;
+  }
+  .fourthBlock {
+    height: 133.3vw;
+  }
+
+  .fourthBlock p,
+  .block_6 p {
+    font-size: 3.9vw;
+  }
+  .circle_5,
+  .circle_6,
+  .circle_7,
+  .circle_8,
+  .circle_9 {
+    width: 7.3vw;
+    height: 7.3vw;
+  }
+  .text4 {
+    margin-top: 13.5vw;
+    margin-left: 2.7vw;
+  }
+  .text6 {
+    margin-top: 71.4vw;
+    margin-left: 60vw;
+  }
+  .text5 {
+    margin-top: 103.9vw;
+    margin-left: 1.8vw;
+  }
+
+  .logo_13 {
+    margin-top: 31vw;
+    margin-left: 1.8vw;
+  }
+  .logo_14 {
+    margin-top: 45.6vw;
+    margin-left: 18.8vw;
+  }
+  .logo_15 {
+    margin-top: 31vw;
+    margin-left: 34.8vw;
+  }
+  .logo_16 {
+    margin-top: 16.7vw;
+    margin-left: 50.9vw;
+  }
+  .logo_17 {
+    margin-top: 0vw;
+    margin-left: 50.9vw;
+  }
+  .logo_18 {
+    margin-top: 45.6vw;
+    margin-left: 67.2vw;
+  }
+  .logo_19 {
+    margin-top: 31vw;
+    margin-left: 84vw;
+  }
+  .logo_20 {
+    margin-top: 80.3vw;
+    margin-left: 34.8vw;
+  }
+  .logo_21 {
+    margin-top: 91.1vw;
+    margin-left: 84vw;
+  }
+  .logo_22 {
+    margin-left: 18.8vw;
+    margin-top: 118.5vw;
+  }
+  .logo_23 {
+    margin-top: 98.4vw;
+    margin-left: 50.9vw;
+  }
+  .fifthBlock {
+    height: 27.4vw;
+  }
+  .dnaCase {
+    width: 107.9vw;
+    height: 25vw;
+  }
+  .dna {
+    margin-top: 1vw;
+  }
+
+  .block_6 {
+    width: 49.3vw;
+  }
+  .block_7 {
+    width: 50vw;
+  }
+  .block_7,
+  .block_6 {
+    height: 85vw;
+  }
+  .sixthBlock {
+    height: 85.8vw;
+  }
+  .pillow2 {
+    margin-left: 23vw;
+  }
+  .pillow3 {
+    margin-left: 45vw;
+  }
+  .pillow4 {
+    margin-left: 48vw;
+  }
+  .block_7 {
+    padding: 10vw 1vw 7.9vw 0vw;
+  }
+  /* .text12 {
+    animation: flying-2 6s infinite linear;
+  }
+  .text13 {
+    animation: flying-3 8s infinite linear;
+  }
+  .text14 {
+    animation: flying-4 7s infinite linear;
+  }
+  .text15 {
+    animation: flying-5 8s infinite linear;
+  }
+  .text16 {
+    animation: flying-6 8s infinite linear;
+  }
+  .circle_14 {
+    animation: flying-7 4s infinite linear;
+  }
+  .circle_10 {
+    animation: flying-8 6s infinite linear;
+  }
+  .circle_11 {
+    animation: flying-9 9s infinite linear;
+  }
+  .circle_12 {
+    animation: flying-10 10s infinite linear;
+  }
+  .circle_13 {
+    animation: flying-11 8s infinite linear;
+  } */
+   /* @keyframes flying-2 {
+  0% {
+    transform: translate(1.6vw, 13.2vw);
+  }
+  50% {
+    transform: translate(7.6vw, 9.6vw);
+  }
+  70% {
+    transform: translate(12.1vw, 12vw);
+  }
+  100% {
+    transform: translate(1.6vw, 13.2vw);
+  }
 }
-@media screen and (max-width: 320px) {
+@keyframes flying-3 {
+  0% {
+    transform: translate(34vw, 10.9vw);
+  }
+  50% {
+    transform: translate(30.9vw, 6.3vw);
+  }
+  70% {
+    transform: translate(23.7vw, 9.8vw);
+  }
+  100% {
+    transform: translate(34vw, 10.9vw);
+  }
+}
+@keyframes flying-4 {
+  0% {
+    transform: translate(12.3vw, 22.2vw);
+  }
+  25% {
+    transform: translate(21.3vw, 26.9vw);
+  }
+  50% {
+    transform: translate(17.6vw, 32.4vw);
+  }
+  80% {
+    transform: translate(5.2vw, 29.4vw);
+  }
+  100% {
+    transform: translate(12.3vw, 22.2vw);
+  }
+}
+@keyframes flying-5 {
+  0% {
+    transform: translate(34vw, 33vw);
+  }
+  50% {
+    transform: translate(37.3vw, 38.7vw);
+  }
+  70% {
+    transform: translate(22.3vw, 39.7vw);
+  }
+  100% {
+    transform: translate(34vw, 33vw);
+  }
+}
+@keyframes flying-6 {
+  0% {
+    transform: translate(1.5vw, 40vw);
+  }
+  50% {
+    transform: translate(6.6vw, 48.2vw);
+  }
+  85% {
+    transform: translate(15.4vw, 45.5vw);
+  }
+  100% {
+    transform: translate(1.5vw, 40vw);
+  }
+}
+@keyframes flying-7 {
+  0% {
+    transform: translate(8.9vw, 6.3vw);
+  }
+  50% {
+    transform: translate(23.8vw, 1.9vw);
+  }
+  80% {
+    transform: translate(19.6vw, 7vw);
+  }
+  100% {
+    transform: translate(8.9vw, 6vw);
+  }
+}
+@keyframes flying-8 {
+  0% {
+    transform: translate(23.2vw, 15.6vw);
+  }
+  50% {
+    transform: translate(31.1vw, 19vw);
+  }
+  80% {
+    transform: translate(26.9vw, 25vw);
+  }
+  100% {
+    transform: translate(23.2vw, 15.6vw);
+  }
+}
+@keyframes flying-9 {
+  0% {
+    transform: translate(45vw, 22.7vw);
+  }
+  50% {
+    transform: translate(34.5vw, 28.8vw);
+  }
+  75% {
+    transform: translate(36.2vw, 20vw);
+  }
+  100% {
+    transform: translate(45vw, 22.7vw);
+  }
+}
+@keyframes flying-10 {
+  0% {
+    transform: translate(8.8vw, 32.4vw);
+  }
+  50% {
+    transform: translate(14vw, 18.1vw);
+  }
+  75% {
+    transform: translate(3.3vw, 29vw);
+  }
+  100% {
+    transform: translate(8.8vw, 32.4vw);
+  }
+}
+@keyframes flying-11 {
+  0% {
+    transform: translate(41.4vw, 42.5vw);
+  }
+  50% {
+    transform: translate(27.7vw, 50.5vw);
+  }
+  85% {
+    transform: translate(5vw, 29vw);
+  }
+  100% {
+    transform: translate(41.4vw, 42.5vw);
+  }
+}
+
+@keyframes moveCircle-1 {
+  0% {
+    opacity: 100%;
+    transform: translate(36.2vw, 3vw);
+  }
+  12.5% {
+    transform: translate(23.4vw, 3vw);
+  }
+  25% {
+    transform: translate(12.5vw, 3vw);
+  }
+  37.5% {
+    transform: translate(1.6vw, 3vw);
+  }
+  50% {
+    transform: translate(1.6vw, 14.9vw);
+  }
+  62.5% {
+    transform: translate(1.6vw, 25.7vw);
+  }
+  75% {
+    transform: translate(12.5vw, 25.7vw);
+  }
+  87.5% {
+    transform: translate(23.4vw, 25.7vw);
+  }
+  100% {
+    opacity: 100%;
+    transform: translate(36.2vw, 25.7vw);
+  }
+}
+@keyframes moveCircle-2 {
+  0% {
+    opacity: 100%;
+    transform: translate(-10vw, 25.7vw);
+  }
+  12.5% {
+    transform: translate(0, 25.7vw);
+  }
+  25% {
+    transform: translate(11vw, 25.7vw);
+  }
+  37.5% {
+    transform: translate(22vw, 25.7vw);
+  }
+  50% {
+    transform: translate(22vw, 14.9vw);
+  }
+  62.5% {
+    transform: translate(22vw, 3vw);
+  }
+  75% {
+    transform: translate(11vw, 3vw);
+  }
+  87.5% {
+    transform: translate(0, 3vw);
+  }
+  100% {
+    opacity: 100%;
+    transform: translate(-10vw, 3vw);
+  }
+} */
+  .humanSleeps {
+    width: 50vw;
+    height: 62.4vw;
+    background-size: 151.4vw 62.4vw;
+    animation: sleeping-3 4s infinite steps(3);
+  }
+
+  @keyframes sleeping-3 {
+    0% {
+      background-position: 0 top;
+    }
+    100% {
+      background-position: -151.4vw top;
+    }
+  }
+  .eighthBlock p {
+    margin-top: 4vw;
+    font-size: 4.7vw;
+  }
+}
+/* @media all and (max-width: 320px) {
 
 } */
