--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -53,7 +53,9 @@ h1 {
 .logo_7 {
   animation: opacity-animation 1.5s linear infinite;
 }
-
+.logo-X {
+  display: none;
+}
 .logo_12,
 .logo_3 {
   animation: opacity-animation 1s linear infinite;
