--- a/stylesheets/animations.css
+++ b/stylesheets/animations.css
@@ -1,10 +1,10 @@
 @keyframes running-animation {
   0% {
-    transform: translateZ(0);
+    transform: translateX(0);
   }
 
   100% {
-    transform: translate3d(-100%, 0, 0);
+    transform: translateX(-100%);
   }
 }
 @keyframes opacity-animation {
