--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -724,6 +724,6 @@ h1 {
   font-weight: lighter;
   font-size: 6vw;
   text-transform: uppercase;
-  animation: running-animation 6s linear infinite;
+  animation: running-animation-2 6s linear infinite;
   white-space: nowrap;
 }
